--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       <h3>Experience</h3>
       <p>I recently graduated from a Front-End Web Development course at General
         Assembly where I learned HTML, CSS, JavaScript, jQuery and how to be an
-        awesome Front-End Web Developer! During my spare time, I enjoy senior
+        <i>awesome</i> Front-End Web Developer! During my spare time, I enjoy senior
         water aerobics, pickling, and spending time with my goldfish, Jerry.
       </p>
       <h4>Portfolio</h4>
